--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,9 @@ body {
    -moz-osx-font-smoothing: grayscale;
    background-color: #0c0032;
 }
+
+.instablam {
+   font-size: 65px;
+   color: palevioletred;
+   letter-spacing: 3px;
+}
